--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -99,12 +99,12 @@
 <body>
   <div class="sidebar">
     <h2>Admin Panel</h2>
-    <a href="users.html">👥 Manage Users</a>
-    <a href="products.html">🛍️ Manage Products</a>
-    <a href="services.html">🧰 Manage Services</a>
-    <a href="bookings.html">📅 Manage Bookings</a>
-    <a href="orders.html">📦 View Orders</a>
-    <a href="promos.html">🏷️ Promo Manager</a>
+    <a href="users-dash.html">👥 Manage Users</a>
+    <a href="products-dash.html">🛍️ Manage Products</a>
+    <a href="services-dash.html">🧰 Manage Services</a>
+    <a href="bookings-dash.html">📅 Manage Bookings</a>
+    <a href="orders-dash.html">📦 View Orders</a>
+    <a href="promos-dash.html">🏷️ Promo Manager</a>
     <button class="logout" id="logoutBtn">🚪 Logout</button>
   </div>  <div class="content">
     <h1>Welcome, <span id="adminName">Admin</span></h1>
