--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -99,7 +99,7 @@
 <body>
   <div class="sidebar">
     <h2>Admin Panel</h2>
-    <a href="anylatics.html">📊 Anylatics </a>
+    <a href="analytics.html">📊 Anylatics </a>
     <a href="users-dash.html">👥 Manage Users</a>
     <a href="products-dash.html">🛍️ Manage Products</a>
     <a href="services-dash.html">🧰 Manage Services</a>
